@@ -379,12 +379,14 @@ local ds_account = 'Default'
 function ItemAuditor:GetItemCount(searchID)
 	local count = 0
 	for _, character in pairs(DataStore:GetCharacters(realm, ds_account)) do
-		local bag, bank = DataStore:GetContainerItemCount(character, searchID)
-		count = count + (bag or 0) + (bank or 0)
-		count = count + (DataStore:GetAuctionHouseItemCount(character, searchID) or 0)
-		count = count + (DataStore:GetInventoryItemCount(character, searchID) or 0)
-		count = count + (DataStore:GetMailItemCount(character, searchID) or 0)
-		count = count + (DataStore:GetCurrencyItemCount(character, searchID) or 0)
+		if DataStore:GetCharacterFaction(character) == UnitFactionGroup("player") then
+			local bag, bank = DataStore:GetContainerItemCount(character, searchID)
+			count = count + (bag or 0) + (bank or 0)
+			count = count + (DataStore:GetAuctionHouseItemCount(character, searchID) or 0)
+			count = count + (DataStore:GetInventoryItemCount(character, searchID) or 0)
+			count = count + (DataStore:GetMailItemCount(character, searchID) or 0)
+			count = count + (DataStore:GetCurrencyItemCount(character, searchID) or 0)
+		end
 	end
 	for guildName in pairs(self.db.factionrealm.enabled_guilds) do
 		count = count + DataStore:GetGuildBankItemCount(DataStore:GetGuilds()[guildName], searchID)
